--- a/HW_10/css/styles.css
+++ b/HW_10/css/styles.css
@@ -4,3 +4,5 @@
 @import "header.css";
 @import "findGiftSection.css";
 @import "howWeWorkSection.css";
+@import "giftsAllOccasions.css";
+@import "getStarted.css";
