--- a/HW_10/css/fonts.css
+++ b/HW_10/css/fonts.css
@@ -1,3 +1,5 @@
+@import 'https://fonts.googleapis.com/css2?family=Roboto&display=swap';
+
 @font-face {
     font-family: 'Gilroy';
     font-weight: bold;
