--- a/HW_10/css/findGiftSection.css
+++ b/HW_10/css/findGiftSection.css
@@ -20,6 +20,10 @@
 }
 
 .find-gift-content p {
+    font-family: Gilroy;
+    font-size: 20px;
+    line-height: 1.4;
+    color: #000000;
     margin-bottom: 52px;
 }
 
