--- a/HW_10/css/giftsAllOccasions.css
+++ b/HW_10/css/giftsAllOccasions.css
@@ -15,7 +15,7 @@
 .gifts-all-occasions-paragraph {
     font-family: Gilroy;
     font-size: 18px;
-    line-height: 135.94%;
+    line-height: 1.33;
     color: #000000;
 
     margin-top: 23px;
