--- a/HW_10/css/howWeWorkSection.css
+++ b/HW_10/css/howWeWorkSection.css
@@ -12,12 +12,16 @@
 .how-we-work-content h2 {
     font-size: 32px;
     font-family: Gilroy;
-    line-height: 140.62%;
+    line-height: 1.41;
     color: #000000;
     
     margin-bottom: 24px;
 }
 
 .how-we-work-content p {
+    font-family: Gilroy;
+    font-size: 20px;
+    line-height: 1.4;
+    color: #000000;
     margin-bottom: 36px;
 }
