--- a/HW_10/css/getStarted.css
+++ b/HW_10/css/getStarted.css
@@ -23,7 +23,7 @@
 .get-started-left-content {
     font-family: Gilroy;
     font-size: 32px;
-    line-height: 140.62%;
+    line-height: 1.41;
     color: #000000;
 }
 
