--- a/HW_13/css/giftsAllOccasions.css
+++ b/HW_13/css/giftsAllOccasions.css
@@ -74,4 +74,10 @@
     background-color: white;
 }
 
+.gridAllOccasionsContainer {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 30px;
+}
+
 
