--- a/HW_13/css/servicesSection.css
+++ b/HW_13/css/servicesSection.css
@@ -82,3 +82,9 @@
 .list-image {
     height: 90px;
 }
+
+.gridServiceContainer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 26px;
+}
